# nixl

./: .clang-format  .pre-commit-config.yaml  CODEOWNERS  meson.build  meson_options.txt  pyproject.toml
.ci/: cidemo-init.sh
.ci/docs/: build-wheel-matrix-ci.md  ci-overview.md
.ci/jenkins/lib/: build-matrix.yaml  build-wheel-matrix.yaml  build-wheel-nightly-matrix.yaml  test-dl-matrix.yaml  test-matrix.yaml
.ci/jenkins/pipeline/: proj-jjb.yaml
.gitlab/: build.sh  test_azure.sh  test_cpp.sh
benchmark/kvbench/: README.md  main.py
benchmark/kvbench/commands/: args.py  ctp-cli.py
benchmark/kvbench/examples/: model_gpt_oss_120b.yaml  model_gpt_oss_20b.yaml
benchmark/kvbench/models/: gpt_oss.py  qwen3.py
benchmark/kvbench/runtime/: __init__.py  etcd_rt.py  mpi_rt.py  rt_base.py  torch_rt.py
benchmark/kvbench/test/: custom_traffic_perftest.py  inference_workload_matgen.py  sequential_custom_traffic_perftest.py  traffic_pattern.py
benchmark/nixlbench/: meson.build  meson_options.txt
benchmark/nixlbench/contrib/: Dockerfile
benchmark/nixlbench/src/runtime/: runtime.h
benchmark/nixlbench/src/runtime/etcd/: README.md  etcd_rt.cpp  etcd_rt.h  python_bindings.cpp  setup.py  test_etcd_runtime.py
benchmark/nixlbench/src/utils/: utils.cpp  utils.h
benchmark/nixlbench/src/worker/: worker.cpp
benchmark/nixlbench/src/worker/nixl/: gdaki_kernels.cu  gdaki_kernels.cuh  gdaki_levels.h  meson.build  nixl_worker.cpp  nixl_worker.h
contrib/: Dockerfile.manylinux  build-container.sh  build-wheel.sh  validate-cuobj-wheel.py
contrib/scripts/: apply-format  install-precommit.sh
src/api/cpp/: nixl.h  nixl_types.h
src/api/cpp/backend/: backend_engine.h  backend_plugin.h
src/core/: nixl_agent.cpp  nixl_plugin_manager.cpp  plugin_manager.h
src/plugins/cuda_gds/: gds_plugin.cpp
src/plugins/doca/: doca_backend.cpp  doca_backend.h  kernel_read.cu  kernel_write.cu
src/plugins/gds_mt/: gds_mt_plugin.cpp
src/plugins/gpunetio/: gpunetio_plugin.cpp
src/plugins/hf3fs/: hf3fs_plugin.cpp
src/plugins/mooncake/: mooncake_plugin.cpp
src/plugins/posix/: posix_plugin.cpp
src/plugins/ucx/: ucx_plugin.cpp
src/plugins/ucx_mo/: ucx_mo_plugin.cpp
src/utils/object/s3/: aws_sdk_init.h  aws_sdk_log.h
test/gtest/plugins/: meson.build
test/nixl/: nixl_doca_cuda_test.cu
test/unit/plugins/: meson.build
test/unit/plugins/cuda_gds/: nixl_gds_test.cpp
test/unit/plugins/gds_mt/: nixl_gds_mt_test.cpp
